V2.17.2 (Oct 30, 2014)
    * Fix issue of translation not imported from dict in case of LABEL context
    * Refresh Translation view after creating or uploading a task

V2.17.1 (Oct 28, 2014)
    * Add validation type "Uncertain unicode character"
    * Fix duplicate text issue in case of importing dictionary repeatedly
    * Fix sort issue of Dictionary History view
    * Add necessary refresh when switch among views

V2.17.0 (Oct 23, 2014)
    * Display count of errors & warnings with detail link in Dictionary view 
    * Add "Validate" feature in Translation view
    * Add option "Remove old labels" for importing dictionary and API
    * Fix unstable order of exported labels
    * Fix grid refresh issue among different views

V2.16.9 (Oct 9, 2014)
    * Add option "escapeApostrophe" to API "generate-dict"
    * Fix display issue of special characters
    * Fix issue of search text

V2.16.8 (Sep 19, 2014)
    * Avoid unnecessary refresh when switch among views
    * Add a "Match whole" option in translation view to enable whole text search
    * Implement Context text merge in context management

V2.16.7 (Sep 5, 2014)
    * Fix issue of manually updating translation
    * Fix issue of Translation changelog
    * Allows to search blank string

V2.16.6 (Aug 27, 2014)
    * Add "Translation changelog search" feature
    * Change label to context [LABEL] when modified translation is shared with other applications
    * Add "Status" column in exported translation details.

V2.16.5 (Aug 15, 2014)
    * Fix unicode escape issue of VitalSuite dictionary
    * Fix parse issue of VitalSuite dictionary
    * Fix issue of populating default context
    * New dictionary format: TS (for Qt resource strings)

V2.16.4 (Jul 18, 2014)
    * Optimize performance of previewing dictionary
    * Fix charset issue of Text properties dictionary

V2.16.3 (Jul 14, 2014)
    * Add progress bar during option "Export translations..."
    * Optimize performance of importing dictionary